--- a/pytainer.toml
+++ b/pytainer.toml
@@ -4,10 +4,15 @@ name = "My Appname"
 version = "1.0"
 requires = []
 launcher = "my_base_file.py"
+language = "python"           #You may leave this blank, if its not a python app. Or set it to python3.9, python3.11 a.s.o
+args = ""                     #Commandline args that have to be passed to the script
 standalone = true             # Set this to false if you want to 
                               # run your app as pyTainer module,
                               # e.g. for communicating with other
                               # non-standalone apps.
+
+[requirements]
+modules = []
 
 [info]
 author = "John Doe"
