--- a/pytainer.toml
+++ b/pytainer.toml
@@ -13,6 +13,7 @@ standalone = true             # Set this to false if you want to
 
 [requirements]
 modules = []
+pytainerversion = '1.0'
 
 [info]
 author = "John Doe"
